refactor: 라이브러리 이름을 @ohah/ime-composition-scroll로 변경

--- a/example/package.json
+++ b/example/package.json
@@ -14,7 +14,7 @@
     "react": "latest",
     "react-dom": "latest",
     "react-router-dom": "latest",
-    "ime-composition-scroll": "workspace:*"
+    "@ohah/ime-composition-scroll": "workspace:*"
   },
   "devDependencies": {
     "@types/react": "latest",
