chore: 명령어 변경

--- a/packages/ime-composition-scroll/package.json
+++ b/packages/ime-composition-scroll/package.json
@@ -19,7 +19,7 @@
   ],
   "scripts": {
     "build": "rslib build",
-    "dev": "rslib dev",
+    "dev": "rslib build --watch",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
     "test:ui": "vitest --ui",
