--- a/packages/ime-composition-scroll/package.json
+++ b/packages/ime-composition-scroll/package.json
@@ -18,7 +18,7 @@
     "src"
   ],
   "scripts": {
-    "build": "rslib build",
+    "build": "rslib build && tsc --emitDeclarationOnly --declaration --outDir dist src/index.ts",
     "dev": "rslib build --watch",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
